Api Key problem fixed

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> WEATHER </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> WEATHER </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="container1">
+            <div class="container_api">
+                <div class="api">
+                    <input type="text" id="search_area1" placeholder="Enter your api key...">
+                    <button id="api-btn"> <img src="search-interface-symbol.png" width="25px"> </button>
+                </div>
+            </div>
+        </div>
     <div class="container">
-        <h1> DADDY'S CHATBOT </h1>
+        <h1> CHATBOT </h1>
         <hr>
         <div id="chat">
         </div>
