Hide api key inputter after key is placed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container1">
+        <div class="container1" id="to_hide">
             <div class="container_api">
                 <div class="api">
                     <input type="text" id="search_area1" placeholder="Enter your api key...">
